MCR-604 tests for calendar
added tests for different calendar types, added hebrew to supported calendars